static/sass/styles.sass
body
	font-family: Roboto, Arial, serif
	font-weight: 400
#container
	position: absolute
	left: 0px
	right: 0px
	top: 0px
	bottom: 0px
	z-index: 0
#search-bar
	position: fixed
	top: 10px
	left: 30px
	width: 20%
	z-index: 10
	padding: 10px
	box-shadow: 0 2px 6px rgba(0,0,0,0.3),0 -3px 8px rgba(0,0,0,0.2)
	border: none
	font-family: Roboto
	font-weight: 300
#building-detail
	position: fixed
	left: 51%
	right: 0px
	top: 0px
	bottom: 0px
	display: none
	z-index: 1
	background-color: rgba(255,255,255,0.3)
	text-align: justify
	padding: 10px
	box-shadow: -2px 0px 5px black
	overflow-y: scroll
	transition: left 1s
	-webkit-transition: left 1s
	-moz-transition: left 1s
	-o-transition: left 1s
	-ms-transition: left 1s
	&.shrink
		left: 90%
		text-align: center
		.detail-architect
			display: none
		.detail-description
			display: none
	.detail-name
		overflow: hidden
		height: 20px
	.detail-architect
		overflow: hidden
		height: 20px
	.detail-description
		overflow: hidden
		height: 20px
	.detail-location
		overflow: hidden
		height: 20px
		margin-bottom: 30px
#info-pane
	position: fixed
	top: 55px
	left: 30px
	width: 20%
	z-index: 10
	padding: 10px
	background-color: #fff
	box-shadow: 0 2px 6px rgba(0,0,0,0.3),0 -3px 8px rgba(0,0,0,0.2)
	height: 100px
	-webkit-backface-visibility: hidden
	-moz-backface-visibility: hidden
	-ms-backface-visibility: hidden
	-o-backface-visibility: hidden
	backface-visibility: hidden
	-webkit-animation-duration: 1s
	-webkit-animation-delay: .2s
	-webkit-animation-timing-function: ease
	-webkit-animation-fill-mode: both
	-moz-animation-duration: 1s
	-moz-animation-delay: .2s
	-moz-animation-timing-function: ease
	-moz-animation-fill-mode: both
	-ms-animation-duration: 1s
	-ms-animation-delay: .2s
	-ms-animation-timing-function: ease
	-ms-animation-fill-mode: both
	-o-animation-duration: 1s
	-o-animation-delay: .2s
	-o-animation-timing-function: ease
	-o-animation-fill-mode: both
	animation-duration: 1s
	animation-delay: .2s
	animation-timing-function: ease
	animation-fill-mode: both
	&:hover
		background-color: rgba(255,255,255,0.5)
	.info-name
		text-align: center
		font-weight: 500
	&:not(.flipInX)
		opacity: 0

.building-element
	padding: 0
	margin: 0
	background-color: #ddd
	width: 200px
	height: 200px
	overflow: hidden
	margin-bottom: 5px
	img
		width: inherit
		height: inherit
		z-index: 1
	.name
		display: none
		position: relative
		top: -100px
		z-index: 2
	&:hover .name
		display: block
	&:hover img
		opacity: .3
/* Here are some modifiers for various alternate sizes. */
.large
	width: 400px
	height: 400px
.wide
	width: 400px
.tall
	height: 400px
/* width is set over so that we ensure complete coverage and allow for extra room for parallax. */
#bg
	position: fixed
	background-attachment: fixed
	background-repeat: repeat-y
	background-size: 100% auto
	top: 0
	left: 0
	right: 0
	bottom: 0
	opacity: .3
#galleria
	width: 700px
	height: 400px
	background: #000

